[PaintTouchActionRects] Paint replaced hit test rects without background

There was an early-out in ReplacedPainter::Paint that would skip
painting touch-action hit test rects if the replaced element did not
also paint a background. This patch skips the early-out if there is a
hit test rect that should be painted.

This does not fully fix https://crbug.com/903480 because accelerated
canvases still do not generate the correct touch action rects.

Bug: 903480
Change-Id: If6cda7339c5a20a04fe669c4d54fae30e83debf2
Reviewed-on: https://chromium-review.googlesource.com/c/1331033
Reviewed-by: Xianda Sun <sunxd@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607236}
Former-commit-id: a5d0ab06c81ed6ec74d73a87c4e0517f3ea1cd32